--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <canvas id="game-canvas"></canvas>
 
+  <script src="js/graphics-library.js"></script>
+  <script src="js/random-library.js"></script>
   <script src="js/game-library.js"></script>
   <script src="js/main.js"></script>
 </body>
